--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
+  batch:
+    job:
+      enabled: false;
+      initialize-schema: always
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/spring_batch
     username: root
     password: admin
+    platform: mysql
 
-  batch:
-    initialize-schema: always
